--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "html5-qrcode": "^2.3.8",
